[0.8.0-beta.1+build.81] Fixed Worker-to-Master update.job.status relay

--- a/bin/install/resources/mysql/my.cnf
+++ b/bin/install/resources/mysql/my.cnf
@@ -133,3 +133,6 @@ key_buffer		= 16M
 
 #### ENABLE load data infile
 local-infile=1
+
+#### ENABLE LARGE 'UNIQUE INDEX' IN TABLE
+innodb_large_prefix=ON
