[0.8.0-beta.1+build.108] Added monitor daemon to restart worker if heartbeat lost

--- a/bin/install/resources/agua/etc/init/foreman.conf
+++ b/bin/install/resources/agua/etc/init/foreman.conf
@@ -8,7 +8,7 @@ limit nproc 524288 1048576
 respawn
 
 script
-	# modify these in /etc/default/$UPSTART_JOB (/etc/default/worker)
+	# modify these in /etc/default/$UPSTART_JOB (/etc/default/foreman)
 	FOREMAN=/usr/bin/$UPSTART_JOB
 	FOREMAN_OPTS=
 	if [ -f /etc/default/$UPSTART_JOB ]; then
