--- a/bin/install/resources/agua/etc/init/listener.conf
+++ b/bin/install/resources/agua/etc/init/listener.conf
@@ -8,7 +8,7 @@ limit nproc 524288 1048576
 respawn
 
 script
-	# modify these in /etc/default/$UPSTART_JOB (/etc/default/master)
+	# modify these in /etc/default/$UPSTART_JOB (/etc/default/listener)
 	LISTENER=/usr/bin/$UPSTART_JOB
 	LISTENER_OPTS=
 	if [ -f /etc/default/$UPSTART_JOB ]; then
