--- a/bin/install/resources/agua/etc/init/monitor.conf
+++ b/bin/install/resources/agua/etc/init/monitor.conf
@@ -1,4 +1,4 @@
-description "Task daemon"
+description "Monitor daemon"
 
 start on filesystem
 stop on runlevel [!2345]
@@ -8,11 +8,11 @@ limit nproc 524288 1048576
 respawn
 
 script
-	# modify these in /etc/default/$UPSTART_JOB (/etc/default/task)
-	TASK=/usr/bin/$UPSTART_JOB
-	TASK_OPTS=
+	# modify these in /etc/default/$UPSTART_JOB (/etc/default/monitor)
+	MONITOR=/usr/bin/$UPSTART_JOB
+	MONITOR_OPTS=
 	if [ -f /etc/default/$UPSTART_JOB ]; then
 		. /etc/default/$UPSTART_JOB
 	fi
-	exec "$TASK" $TASK_OPTS
+	exec "$MONITOR" $MONITOR_OPTS
 end script
